syntax = "proto3";

package ua.anastasiia.finesapp.input.reqreply.fine;

import "ua/anastasiia/finesapp/input/reqreply/error.proto";

option java_package = "ua.anastasiia.finesapp.input.reqreply.fine";
option java_multiple_files = true;

message GetCategoryBodyByMakeModelRequest {
    string make = 1;
    string model = 2;
}

message GetCategoryBodyByMakeModelResponse {
    oneof response {
        Success success = 1;
        Failure failure = 2;
    }

    message Success {
        CategoryBody category_body = 1;

        message CategoryBody {
            string category = 1;
            string body = 2;
        }
    }

    message Failure {
        string message = 100;
        oneof error {
            Error fine_id_not_found_error = 1;
        }
    }
}
